--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -4,12 +4,12 @@
      <meta charset="utf-8">
      <meta name="vievport" content="width-device-width, initial-scale=1.0">
      <title>Shop</title>
+     <link rel="stylesheet"; href="reset.css">
      <link rel="stylesheet"; href="style8.css">
 
  </head>
- <body style="background-color:rgb(21, 25, 63)">
+ <body style="background-color:rgb(200, 158, 255)">
  
-</header>
-
+<h1>Hello world</h1>
 </body>
 </html>
