--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -6,6 +6,7 @@
      <title>Shop</title>
      <link rel="stylesheet"; href="reset.css">
      <link rel="stylesheet"; href="style8.css">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
  </head>
  <body style="background-color:rgb(200, 158, 255)">
