--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -10,7 +10,8 @@
 
  </head>
  <body style="background-color:rgb(200, 158, 255)">
- 
-<h1>Hello world</h1>
+<header class="header">header</header>
+<main class="main">main</main>
+<footer class="footer">footer</footer>
 </body>
 </html>
