add container div

--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -2,7 +2,7 @@
 <html>
  <head>
      <meta charset="utf-8">
-     <meta name="vievport" content="width-device-width, initial-scale=1.0">
+     <!--<meta name="vievport" content="width-device-width, initial-scale=1.0">-->
      <title>Shop</title>
      <link rel="stylesheet"; href="reset.css">
      <link rel="stylesheet"; href="style8.css">
@@ -10,7 +10,10 @@
 
  </head>
  <body style="background-color:rgb(200, 158, 255)">
-<header class="header">header</header>
+<header class="header">
+    <div class="container">
+        Header
+    </div></header>
 <main class="main">main</main>
 <footer class="footer">footer</footer>
 </body>
