--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -12,8 +12,38 @@
  <body style="background-color:rgb(200, 158, 255)">
 <header class="header">
     <div class="container">
-        Header
-    </div></header>
+     <div class="row">
+        <div class="col-md-3">
+            <div class="logo">
+                <a href="">
+                <img src="images/logo.png">
+                </a>
+            </div>
+        </div>
+
+         <div class="col-md-6">
+             <nav>
+         <ul class="menu">
+         <li><a href="">Home</a></li>
+         <li><a href="">Products</a></li>
+         <li><a href="">Shipping</a></li>
+         <li><a href="">Contacts</a></li>
+         </ul>
+        </nav>
+         </div>
+
+        <div class="col-md-3">
+            <div class="search-field">
+                <input type="text" placeholder="Search">
+                <button class="searchbtn"><img src="images/icon (4).png" alt=""></button>
+            </div>
+            <div class="ordbut">
+                <div class="btn"><a href=""><img src="images/icon (1).png" alt=""></a></div>
+            </div>
+        </div>
+     </div>
+    </div>
+</header>
 <main class="main">main</main>
 <footer class="footer">footer</footer>
 </body>
