--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -2,7 +2,7 @@
 <html>
  <head>
      <meta charset="utf-8">
-     <!--<meta name="vievport" content="width-device-width, initial-scale=1.0">-->
+     <meta name="vievport" content="width-device-width, initial-scale=1.0">
      <title>Shop</title>
      <link rel="stylesheet"; href="reset.css">
      <link rel="stylesheet"; href="style8.css">
@@ -25,26 +25,124 @@
              <nav>
          <ul class="menu">
          <li><a href="">Home</a></li>
-         <li><a href="">Products</a></li>
+         <li class="prod"><a href="">Products</a>
+            <ul class="subprod">
+                <li><a href="">Lorem, ipsum dolor</a></li>
+                <li><a href="">sit amet consectetur </a></li>
+                <li><a href="">Totam, hic laboriosam!</a></li>
+                <li><a href="">officia aliquam debit</a></li>
+                <li><a href="">Cum in laudantium asperiores</a></li>
+                <li><a href="">ducimus vel sit quos</a></li>
+                <li><a href="">doloremque placeat quam!</a></li>        
+            </ul>
+        </li>
+         <li><a href="">Payment</a></li>
          <li><a href="">Shipping</a></li>
-         <li><a href="">Contacts</a></li>
          </ul>
         </nav>
          </div>
 
         <div class="col-md-3">
-            <div class="search-field">
-                <input type="text" placeholder="Search">
-                <button class="searchbtn"><img src="images/icon (4).png" alt=""></button>
-            </div>
-            <div class="ordbut">
-                <div class="btn"><a href=""><img src="images/icon (1).png" alt=""></a></div>
+            <div class="row">
+                <div class="col-9">
+                    <div class="search-field">
+                    <input type="text" placeholder="Search">
+                    <button class="searchbtn"></button>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="ordbut">
+                        <div class="products-count"></div>           
+                    </div>
+                </div>
             </div>
         </div>
      </div>
     </div>
 </header>
-<main class="main">main</main>
+<main class="main">
+<div class="container">
+    <div class="col-md-3">
+        <div class="list">
+            DEVICE TYPE
+        <ul>
+            <checkbox><li>Laptop</li></checkbox>
+            <checkbox><li>Tablet</li></checkbox>
+        </ul>
+        COLOR
+        <ul>
+            <checkbox><li>Black</li></checkbox>
+            <checkbox><li>Red</li></checkbox>
+            <checkbox><li>Green</li></checkbox>
+            <checkbox><li>Blue</li></checkbox>
+            <checkbox><li>Orange</li></checkbox>
+        </ul>
+        RAM
+        <ul>
+            <checkbox><li>1 GB</li></checkbox>
+            <checkbox><li>2 GB</li></checkbox>
+            <checkbox><li>4 GB</li></checkbox>
+            <checkbox><li>6 GB</li></checkbox>
+            <checkbox><li>8 GB</li></checkbox>
+        </ul>
+        </div>
+    </div>
+    <div class="col-md-9">
+        <p class="headline">Laptops and tablets</p>
+        <div class="tovitem">
+            <img src="" alt="" width="270" height="180">
+            <div class="info">
+            <p class="f30">#1 Device Name </p>
+            <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
+            <p class="f21"><b>TYPE:</b> Laptop</p>
+            <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
+            <p class="f21"><b>RAM:</b> 1GB</p>
+            </div>   
+            <div class="price">
+            <p class="headline">$599<sup>25</sup></p>
+            <button class="details"><p class="f21">MORE DETAILS</p></button>
+            <button class="addcart">ADD TO CART</button>
+            </div> 
+        </div>
+        <div class="tovitem">
+            <img src="" alt="" width="270" height="180">
+            <div class="info">
+            <p class="f30">#2 Device Name </p>
+            <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
+            <p class="f21"><b>TYPE:</b> Laptop</p>
+            <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
+            <p class="f21"><b>RAM:</b> 1GB</p>
+            </div>   
+            <div class="price">
+            <p class="headline">$1250<sup>99</sup></p>
+            <button class="details"><p class="f21">MORE DETAILS</p></button>
+            <button class="addcart">ADD TO CART</button>
+            </div> 
+        </div>
+        <div class="tovitem">
+            <img src="" alt="" width="270" height="180">
+            <div class="info">
+            <p class="f30">#3 Device Name </p>
+            <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
+            <p class="f21"><b>TYPE:</b> Laptop</p>
+            <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
+            <p class="f21"><b>RAM:</b> 1GB</p>
+            </div>   
+            <div class="price">
+            <p class="headline">$399<sup>50</sup></p>
+            <button class="details"><p class="f21">MORE DETAILS</p></button>
+            <button class="addcart">ADD TO CART</button>
+            </div> 
+        </div>
+        <div class="tovitem"></div>
+        <div class="tovitem"></div>
+        <div class="tovitem"></div>
+        <div class="tovitem"></div>
+        <div class="tovitem"></div>
+        <div class="tovitem"></div>
+    </div>
+</div>
+</main>
 <footer class="footer">footer</footer>
 </body>
 </html>
