add some corrections

--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -61,88 +61,111 @@
     </div>
 </header>
 <main class="main">
+    <div class="slide"></div>
 <div class="container">
-    <div class="col-md-3">
+    <aside class="col-md-3">
         <div class="list">
             DEVICE TYPE
         <ul>
-            <checkbox><li>Laptop</li></checkbox>
-            <checkbox><li>Tablet</li></checkbox>
+            <li><input type="checkbox" name="" id="">Laptop</li>
+            <li><input type="checkbox" name="" id="">Tablet</li>
         </ul>
         COLOR
         <ul>
-            <checkbox><li>Black</li></checkbox>
-            <checkbox><li>Red</li></checkbox>
-            <checkbox><li>Green</li></checkbox>
-            <checkbox><li>Blue</li></checkbox>
-            <checkbox><li>Orange</li></checkbox>
+            <li><input type="checkbox" name="" id="">Black</li>
+            <li><input type="checkbox" name="" id="">Red</li>
+            <li><input type="checkbox" name="" id="">Green</li>
+            <li><input type="checkbox" name="" id="">Blue</li>
+            <li><input type="checkbox" name="" id="">Orange</li>
         </ul>
         RAM
         <ul>
-            <checkbox><li>1 GB</li></checkbox>
-            <checkbox><li>2 GB</li></checkbox>
-            <checkbox><li>4 GB</li></checkbox>
-            <checkbox><li>6 GB</li></checkbox>
-            <checkbox><li>8 GB</li></checkbox>
+            <li><input type="checkbox" name="" id="">1 GB</li>
+            <li><input type="checkbox" name="" id="">2 GB</li>
+            <li><input type="checkbox" name="" id="">4 GB</li>
+            <li><input type="checkbox" name="" id="">6 GB</li>
+            <li><input type="checkbox" name="" id="">8 GB</li>
         </ul>
         </div>
-    </div>
-    <div class="col-md-9">
-        <p class="headline">Laptops and tablets</p>
-        <div class="tovitem">
-            <img src="" alt="" width="270" height="180">
-            <div class="info">
-            <p class="f30">#1 Device Name </p>
-            <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
-            <p class="f21"><b>TYPE:</b> Laptop</p>
-            <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
-            <p class="f21"><b>RAM:</b> 1GB</p>
-            </div>   
-            <div class="price">
-            <p class="headline">$599<sup>25</sup></p>
-            <button class="details"><p class="f21">MORE DETAILS</p></button>
-            <button class="addcart">ADD TO CART</button>
-            </div> 
+    </aside>
+    <section class="col-md-9">
+        <div class="breadcrumbs"></div>
+        <div><p class="headline">Laptops and tablets</p></div>
+        <div class="row">
+            <div class="tovitem">
+                <div class="image">
+                    <img src="images/icon (17).png" alt="">
+                    <div class="frfav"></div>
+                    <div class="frfav2"></div>
+                </div>
+                <div class="info">
+                    <p class="f30">#1 Device Name </p>
+                    <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
+                    <p class="f21"><b>TYPE:</b> Laptop</p>
+                    <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
+                    <p class="f21"><b>RAM:</b> 1GB</p>
+                </div>   
+                <div class="price">
+                    <p class="headline">$599<sup>25</sup></p>
+                    <button class="details"><b>MORE DETAILS</b></button>
+                    <button class="addcart"><b>ADD TO CART</b></button>
+                </div> 
+            </div>
+            <div class="tovitem">
+                <div class="image">
+                    <img src="images/icon (11).png" alt="">
+                    <div class="frfav"></div>
+                    <div class="frfav2"></div>
+                </div>
+                <div class="info">
+                    <p class="f30">#2 Device Name </p>
+                    <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
+                    <p class="f21"><b>TYPE:</b> Laptop</p>
+                    <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
+                    <p class="f21"><b>RAM:</b> 1GB</p>
+                </div>   
+                <div class="price">
+                    <p class="headline">$1250<sup>99</sup></p>
+                    <button class="details"><b>MORE DETAILS</b></button>
+                    <button class="addcart"><b>ADD TO CART</b><img src="images/icon (2).png"></button>
+                </div> 
+            </div>
+            <div class="tovitem">
+                <div class="image">
+                    <img src="images/icon (13).png" alt="">
+                    <div class="frfav"></div>
+                    <div class="frfav2"></div>
+                </div>
+                <div class="info">
+                    <p class="f30">#3 Device Name </p>
+                    <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
+                    <p class="f21"><b>TYPE:</b> Laptop</p>
+                    <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
+                    <p class="f21"><b>RAM:</b> 1GB</p>
+                </div>   
+                <div class="price">
+                    <p class="headline">$399<sup>50</sup></p>
+                    <button class="details"><b>MORE DETAILS</b></button>
+                    <button class="addcart"><b>ADD TO CART</b></button>
+                </div> 
+            </div>
+            <div class="tovitem"></div>
+            <div class="tovitem"></div>
+            <div class="tovitem"></div>
+            <div class="tovitem"></div>
+            <div class="tovitem"></div>
+            <div class="tovitem"></div>
+            <div class="load">
+                <button>Load more ...</button>
+            </div>
         </div>
-        <div class="tovitem">
-            <img src="" alt="" width="270" height="180">
-            <div class="info">
-            <p class="f30">#2 Device Name </p>
-            <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
-            <p class="f21"><b>TYPE:</b> Laptop</p>
-            <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
-            <p class="f21"><b>RAM:</b> 1GB</p>
-            </div>   
-            <div class="price">
-            <p class="headline">$1250<sup>99</sup></p>
-            <button class="details"><p class="f21">MORE DETAILS</p></button>
-            <button class="addcart">ADD TO CART</button>
-            </div> 
-        </div>
-        <div class="tovitem">
-            <img src="" alt="" width="270" height="180">
-            <div class="info">
-            <p class="f30">#3 Device Name </p>
-            <P class="f21">Lorem ipsum dolor sit amet consectetur adipisicing elit. </P>
-            <p class="f21"><b>TYPE:</b> Laptop</p>
-            <p class="f21"><b>SCREEN SIZE:</b> 7 inches</p>
-            <p class="f21"><b>RAM:</b> 1GB</p>
-            </div>   
-            <div class="price">
-            <p class="headline">$399<sup>50</sup></p>
-            <button class="details"><p class="f21">MORE DETAILS</p></button>
-            <button class="addcart">ADD TO CART</button>
-            </div> 
-        </div>
-        <div class="tovitem"></div>
-        <div class="tovitem"></div>
-        <div class="tovitem"></div>
-        <div class="tovitem"></div>
-        <div class="tovitem"></div>
-        <div class="tovitem"></div>
-    </div>
+    </section>
 </div>
 </main>
-<footer class="footer">footer</footer>
+<footer class="footer">
+    
+        (c) Copyrightl 2020
+    
+</footer>
 </body>
 </html>
