--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -91,6 +91,11 @@
     <section class="col-md-9">
         <div class="breadcrumbs"></div>
         <div><p class="headline">Laptops and tablets</p></div>
+        <div class="sort">
+            <select name="" id="">
+                <option value=""></option>
+            </select>
+        </div>
         <div class="row">
             <div class="tovitem">
                 <div class="image">
