change product number text

--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -25,7 +25,7 @@
              <nav>
          <ul class="menu">
          <li><a href="">Home</a></li>
-         <li class="prod"><a href="">Products</a>
+         <li class="prod"><a href="">Products 2</a>
             <ul class="subprod">
                 <li><a href="">Lorem, ipsum dolor</a></li>
                 <li><a href="">sit amet consectetur </a></li>
