--- a/lesson 8 шапка сайту.html
+++ b/lesson 8 шапка сайту.html
@@ -90,7 +90,7 @@
     </aside>
     <section class="col-md-9">
         <div class="breadcrumbs"></div>
-        <div><p class="headline">Laptops and tablets</p></div>
+        <div><p class="headline">Laptops and tablets 3</p></div>
         <div class="sort">
             <select name="" id="">
                 <option value=""></option>
