--- a/lesson 8.html
+++ b/lesson 8.html
@@ -89,8 +89,15 @@
         </div>
     </aside>
     <section class="col-md-9">
-        <div class="breadcrumbs"></div>
+        <div class="breadcrumbs"><a href="">Home</a>><a href="">Catalogue</a>><a href="">Laptops and tablets</a></div>
         <div><p class="headline">Laptops and tablets</p></div>
+        <div class="sort">
+            <select name="sortlist" id="" aria-placeholder="sort">
+                <option value="">sort by price</option>
+                <option value="">sort by price</option>
+                <option value="">sort by price</option>
+            </select>
+        </div>
         <div class="row">
             <div class="tovitem">
                 <div class="image">
